<resources>
    <string name="app_name">商务云</string>
    <string name="navigation_drawer_open">打开</string>
    <string name="navigation_drawer_close">关闭</string>
    <string name="home">消息</string>
    <string name="knowledge_system">联系人</string>
    <string name="navigation">联系人</string>
    <string name="action_dynamic">动态</string>
    <string name="mine">我的</string>
    <string name="exit_tip">再按一次退出程序</string>
    <string name="share_article_url">%1$s分享【%2$s】：%3$s</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="empty_view_hint">暂无数据</string>
    <string name="error_view_hint">加载失败</string>
    <string name="no_network_view_hint">网络异常</string>
    <string name="network_unavailable_tip">网络连接不可用,请检查网络设置!</string>
    <string name="username">请输入手机号</string>
    <string name="password">* 密码（6-20位字母、数字或字符）</string>
    <string name="invitationcode">请输入邀请吗(选填)</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="no_account">没有账号？去注册</string>
    <string name="code">请输入验证码</string>
    <string name="username_not_empty">用户名不能为空</string>
    <string name="password_not_empty">密码不能为空</string>
    <string name="have_account">已有账户？去登录</string>
    <string name="enter_password_again">再输入一次密码</string>
    <string name="confirm_password_not_empty">确认密码不能为空</string>
    <string name="password_cannot_match">两次密码不相同</string>
    <string name="login_success">登录成功</string>
    <string name="sms_succes">验证码已发送</string>
    <string name="login_fail">登录失败</string>
    <string name="register_success">注册成功</string>
    <string name="forget_password_success">密码修改成功</string>
    <string name="register_fail">注册失败</string>
    <string name="confirm_logout">确认退出登录？</string>
    <string name="logout_success">已退出登录</string>
    <string name="logout_ing">正在退出登录</string>
    <string name="login_tint">请先登录</string>
    <string name="login_ing">登录中...</string>
    <string name="register_ing">注册中...</string>
    <string name="forgetpasd">密码修改中...</string>
    <string name="record">加载中...</string>
    <string name="login_now">立即登录</string>
    <string name="register_personal">个人注册</string>
    <string name="register_company">企业注册</string>
    <string name="user_agreement">查看《用户协议》</string>
    <string name="next">下一步</string>
    <string name="input_id">请输入企业id</string>
    <string name="input_username">请输入企业名称</string>
    <string name="email">* 请输入邮箱</string>
    <string name="area">请输入所在区域</string>
    <string name="logo_com">请上传公司logo</string>
    <string name="register_now">立即注册</string>
    <string name="upload_your_head">请上传个人图像</string>
    <string name="canceled">取消</string>
    <string name="import_user_names">qingshur  </string>
    <string name="input_emails">qingshur  </string>
    <string name="position_com">请输入您的职位</string>
    <string name="companyint_com">请输入公司介绍</string>
    <string name="busnissscope_com">请输入经营范围</string>
    <string name="busnissgoal_com">请选择企业目标</string>
    <string name="toast_error">请输入正确的</string>
    <string name="toast_error_id">id</string>
    <string name="toast_error_area">地区</string>
    <string name="toast_error_email">邮箱</string>
    <string name="toast_error_psw">密码</string>
    <string name="toast_error_name">公司名称</string>
    <string name="forgetpsds">忘记密码</string>
    <string name="user_present">个人简介</string>
    <string name="import_user_name"></string>
    <string name="newpassword">新密码（6-20位字母、数字或字符）</string>
    <string name="input_emaill">* 请输入邮箱</string>
    <string name="complete">完成</string>
    <string name="please_enter_password">请在输入一次密码</string>
    <string name="enter_phone_number_email">请输入手机号/用户名</string>
    <string name="enter_username">请输入用户名</string>
    <string name="enter_phone">* 请输入手机号</string>
    <string name="choice_location">* 请选择所在地区</string>
    <string name="album_view">选择图片</string>
    <string name="image_view">单击选择</string>
    <string name="add">确定</string>
    <string name="selected">已选</string>
    <string name="limit_exceeded">最多能选 %d 张</string>
    <string name="error_gif">error_gif</string>
    <string name="permission_request_denied">Permission request denied</string>
    <string name="input_introduction">Please input the introduction</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="choose_hobbies">请选择爱好</string>
    <string name="hobby">兴趣爱好</string>
    <string name="labels_please">请职业标签</string>
    <string name="leisure">休闲类</string>
    <string name="your_tap_career">您已选择的标签</string>
    <string name="add_tag">点击下方标签可直接添加</string>
    <string name="lab_commit">提交</string>
    <string name="busnissgoal">企业目标</string>
    <string name="input_companyint">请输入公司介绍</string>
    <string name="ini_company">公司简介</string>
    <string name="busnissscope">经营范围</string>
    <string name="iuput_busnissscope">请输入经营范围</string>
    <string name="user_agree">用户协议</string>
    <string name="search">搜索</string>
    <string name="my_collection">我的收藏</string>
    <string name="my_balance">我的余额</string>
    <string name="floor_mycom">公司主页</string>
    <string name="introduction_mycom">公司简介</string>
    <string name="cooperation_mycom">我的招聘</string>
    <string name="follow_mycom">公司目标</string>
    <string name="bankcard_mycom">银行卡管理</string>
    <string name="setting">设置</string>
    <string name="account_balance">账户余额</string>
    <string name="add_sub_account">添加子账户</string>
    <string name="get_ing">获取数据中</string>
    <string name="save_success">保存成功</string>
    <string name="input_lastname">* 请输入姓氏</string>
    <string name="input_firstname">* 请输入名字</string>
    <string name="email_company">公司邮箱</string>
    <string name="tel_company">公司电话</string>
    <string name="address_company">公司地址</string>
    <string name="intru_company">公司简介</string>
    <string name="my_need_position">我招聘的岗位</string>
    <string name="more">更多</string>
    <string name="recommend">推荐</string>
    <string name="add_newfriend">添加新朋友</string>
    <string name="invite_newfriend">邀请新的朋友</string>
    <string name="form_contact">群聊</string>
    <string name="choose_contact">选择联系人</string>
    <string name="please_wait">Please wait…</string>
    <string name="dlg_error">Error</string>
    <string name="dlg_ok">OK</string>
    <string name="dlg_cancel">Cancel</string>
    <string name="dlg_loading">Loading…</string>
    <string name="dlg_choose_image_from">Select photo from…</string>
    <string name="dlg_retry">Retry</string>
    <string name="init_configs_error">Initializing configs error</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="splash_app_version">v %s</string>
    <string name="error_parsing_configs">Parsing sample\'s configs error</string>
    <string name="chat_sample">Chat Sample</string>
    <string name="menu_new_chat">New Chat</string>
    <string name="menu_chat_info">Chat info</string>
    <string name="menu_add_users_to_chat">Add Users to Chat</string>
    <string name="menu_leave_chat">Leave Chat</string>
    <string name="menu_delete_chat">Delete Chat</string>
    <string name="menu_dialogs_logout">Logout</string>
    <string name="menu_dialogs_delete">Delete</string>
    <string name="menu_select_people_done">Done</string>
    <string name="dlg_restoring_chat_session">Restoring chat session…</string>
    <string name="dlg_restoring_chat_session_logout">Restoring session and logout</string>
    <string name="create_chat">Creating chat…</string>
    <string name="dlg_login">Login…</string>
    <string name="placeholder_username_you">%s (you)</string>
    <string name="error_recreate_session">Login Chat error</string>
    <string name="login_title">@string/chat_sample</string>
    <string name="splash_app_title">@string/chat_sample</string>
    <string name="splash_create_session_error">Create session errors:</string>
    <string name="login_select_user_for_login">Select User for Login to Chat</string>
    <string name="login_cant_obtain_users">Can\'t obtain users errors</string>
    <string name="login_chat_login_error">Login Chat error. Please relogin. Error</string>
    <string name="dialogs_logged_in_as">Logged in as %s</string>
    <string name="dialogs_creation_error">Dialog creation errors</string>
    <string name="dialogs_deletion_error">Dialog deletion errors</string>
    <string name="dialogs_list_hint">Select a Dialog to Chat</string>
    <string name="dialogs_get_error">Get dialogs errors</string>
    <string name="select_users_list_hint">Select Users you want to chat</string>
    <string name="select_users_create_chat">Create new chat</string>
    <string name="select_users_edit_chat">Add Users to chat</string>
    <string name="select_users_get_users_error">Get users errors</string>
    <string name="select_users_choose_users">Please, choose at least one participant</string>
    <string name="chat_sticker">Sticker</string>
    <string name="chat_send">Send</string>
    <string name="chat_edit_text_hint">Message</string>
    <string name="chat_me">Me</string>
    <string name="chat_friend">Friend</string>
    <string name="chat_join_error">Error join group chat</string>
    <string name="chat_send_message_error">Failed to send a message</string>
    <string name="chat_load_history_error">Load chat history errors</string>
    <string name="chat_load_users_error">Load chat users errors</string>
    <string name="chat_attachment_error">Can\'t load chosen file</string>
    <string name="chat_attachment">Attachment</string>
    <string name="chat_empty_you_are_alone_here">You\'re all alone out here.</string>
    <string name="chat_empty_start_new_chat">Start new chat.</string>
    <string name="chat_unsupported_type">Unsupported dialog type</string>
    <string name="chat_wait_for_attachments_to_upload">Wait for all attachments to upload</string>
    <string name="notification_title">Quickblox Chat Notification</string>
    <string name="connection_error">Chat connection has been dropped</string>
    <string name="reconnect_alert">Reconnecting in %s seconds</string>
    <string name="chat_info">Chat info</string>
    <string name="chat_info_add_people_error">Add people errors</string>
    <string name="group_chat_join_error">Could not join chat, errors:</string>
    <string name="public_group_chat_cannot_be_deleted">Public Group chat can be deleted only by owner</string>
    <string name="error_leave_chat">Error leaving room</string>
    <string name="sender_id">761750217637</string>
    <string name="current_version">0.9.1</string>
    <string name="dlg_signal_error">Disconnected… Please check your Internet connection!</string>
    <string name="dlg_sign_in">Sign In…</string>
    <string name="dlg_updating_user">Updating user…</string>
    <string name="dlg_creating_new_user">Creating new user…</string>
    <string name="dlg_logout">Logout…</string>
    <string name="dlg_loading_opponents">Loading opponents…</string>
    <string name="error_max_opponents_count">You can select up to %d opponents</string>
    <string name="sign_up_error">Error creating new user, please try again</string>
    <string name="sign_in_error_with_error">Sign In error. Error</string>
    <string name="sign_in_error_without_error">Sign In error</string>
    <string name="logout_user_with_error">Logout user error. Error</string>
    <string name="error_empty_login">Login can not be empty</string>
    <string name="error_empty_chat_room_name">Chat room name can not be empty</string>
    <string name="update_user_error">Update user error. Error</string>
    <string name="loading_users_error">Loading users error. Error</string>
    <string name="permission_unavailable">%s is not available now!</string>
    <string name="accepted">Accepted</string>
    <string name="unread_count">0</string>
    <string name="users_online">Users Online: </string>
    <string name="image_preview">Image preview</string>
</resources>