<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/viewBackground"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/dp_15"
        android:paddingRight="@dimen/dp_15"
        >
       <LinearLayout
           android:layout_width="match_parent"
           android:orientation="horizontal"
           android:paddingTop="@dimen/dp_10"
           android:paddingBottom="@dimen/dp_10"
           android:layout_height="@dimen/dp_50">
           <ImageView
               android:layout_width="@dimen/dp_24"
               android:src="@drawable/arrow_login"
               android:layout_height="match_parent" />
           <TextView
               android:layout_width="0dp"
               android:layout_weight="1"
               android:layout_height="wrap_content" />
           <TextView
               android:id="@+id/tv_sign_up"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="center"
               android:textColor="@color/colorAccent"
               android:text="@string/register"
               android:textSize="@dimen/sp_17" />

       </LinearLayout>
        <ImageView
            android:layout_width="@dimen/dp_80"
            android:layout_height="@dimen/dp_80"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/dp_24"
            android:src="@drawable/business_login" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_8"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:textSize="@dimen/sp_16"
                android:textColorHint="@color/text_color"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_8"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_16"
                android:textColorHint="@color/text_color"
                android:hint="@string/password"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_8"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_16"
                android:hint="@string/invitationcode"
                android:textColorHint="@color/text_color"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="@dimen/dp_24"
            android:layout_marginTop="@dimen/dp_24"
            android:background="@drawable/btn_login_bg"
            android:gravity="center"
            android:textSize="@dimen/sp_17"
            android:padding="@dimen/dp_12"
            android:text="@string/login"
            android:textColor="@color/White" />


    </LinearLayout>
</ScrollView>