<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="10dp"
    android:paddingTop="10dp"
    android:clickable="true">

    <ImageView
        android:id="@+id/imageviewchatroomAvatar"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="15dp"
        android:background="@drawable/cc_circular_background"
        android:padding="10dp"
        app:srcCompat="@drawable/cc_ic_group" />

    <TextView
        android:id="@+id/textviewChatroomName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/imageviewchatroomAvatar"
        android:layout_centerVertical="true"
        android:text="@string/accepted"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:fontFamily="sans-serif"
        android:maxLines="1"
        android:ellipsize="end"
        android:layout_marginStart="@dimen/dp_15"
        />

    <TextView
        android:visibility="gone"
        android:id="@+id/textviewUsersOnlineMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:text="@string/users_online"
        android:textColor="#7A7A7A"
        android:textSize="12sp" />

    <TextView
        android:visibility="gone"
        android:id="@+id/textViewChatroomUsersOnline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="2dp"
        android:paddingStart="2dp"
        android:text="0"
        android:textColor="@color/colorAccent"
        android:textSize="12sp" />

    <ImageView
        android:visibility="gone"
        android:id="@+id/imageviewforwardArrow"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:src="@drawable/cc_ic_forward_arrow" />

    <TextView
        android:visibility="gone"
        android:id="@+id/textviewChatroomUnreadCount"
        android:layout_width="26dp"
        android:layout_height="26dp"
        android:layout_centerVertical="true"
        android:layout_marginRight="12dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/cc_circular_background"
        android:gravity="center_vertical|center_horizontal"
        android:padding="1dp"
        android:singleLine="true"
        android:text="@string/unread_count"
        android:textColor="#FFF"
        android:textSize="11sp" />

    <ImageView
        android:id="@+id/imageViewGroupProtected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginRight="5dp"
        android:layout_marginEnd="5dp"

        android:adjustViewBounds="true"
        android:contentDescription="@string/image_preview"
        android:maxWidth="24dp"
        android:padding="3dp"
        android:visibility="gone"
        android:src="@drawable/ic_custom_chatroom_protected" />

</RelativeLayout>