<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="@color/white"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:padding="@dimen/dp_15"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="50dp"
                android:src="@drawable/reg_contact"
                android:layout_height="50dp" />

                <TextView
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="13dp"
                    android:layout_width="wrap_content"
                    android:text="@string/add_newfriend"
                    android:textColor="@color/black"
                    android:gravity="left"
                    android:textSize="17sp"
                    android:layout_height="wrap_content" />



        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:background="@color/Grey200"
            android:layout_height="1dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:padding="@dimen/dp_15"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="50dp"
                android:src="@drawable/invite_contact"
                android:layout_height="50dp" />

            <TextView
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="13dp"
                android:layout_width="wrap_content"
                android:text="@string/invite_newfriend"
                android:textColor="@color/black"
                android:gravity="left"
                android:textSize="17sp"
                android:layout_height="wrap_content" />

        </LinearLayout>



        <View
            android:layout_width="match_parent"
            android:background="@color/Grey200"
            android:layout_height="1dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:padding="@dimen/dp_15"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="50dp"
                android:src="@drawable/form_contact"
                android:layout_height="50dp" />

            <TextView
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="13dp"
                android:layout_width="wrap_content"
                android:text="@string/form_contact"
                android:textColor="@color/black"
                android:gravity="left"
                android:textSize="17sp"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>